Complete enterprise-grade features implementation
 Cross-Browser Compatibility:
- Comprehensive browser detection and feature support checking
- Polyfills for older browsers (Array.from, Object.assign, Promise, Fetch)
- CSS compatibility fixes for flexbox and grid
- WebSocket and storage compatibility layers
- Browser-specific fixes for Safari, IE, and mobile browsers

 Mobile-First Optimization & PWA:
- Complete PWA implementation with manifest.json
- Service Worker with offline support and caching strategies
- Push notifications and background sync
- Mobile touch optimization and viewport handling
- Lazy loading and performance optimizations
- App installation prompts and shortcuts

 SEO Technical Implementation:
- Comprehensive meta tags and Open Graph support
- Structured data (JSON-LD) for Organization, WebSite, WebApplication
- Sitemap and robots.txt generation
- Image and heading optimization
- Analytics integration and page tracking
- Dynamic SEO for different page types

 Production Debugging & Error Tracking:
- Complete error tracking system with categorization
- Performance monitoring (long tasks, memory usage)
- User interaction tracking and breadcrumbs
- Global error handling and React Error Boundary
- Debug panel for development
- Error reporting and statistics

 Integration:
- All features integrated into main App component
- Error Boundary wrapping entire application
- PWA manifest linked in HTML
- Comprehensive initialization of all systems

This transforms the parking system into an enterprise-grade application with professional monitoring, debugging, and optimization capabilities.

--- a/parking-front/public/index.html
+++ b/parking-front/public/index.html
@@ -33,6 +33,10 @@
   
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/fontawesome.min.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css" />
+  
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  
   <title>WeLink CARGO - Smart Parking Solutions</title>
 </head>
 
