Add ultra-early console suppression script to eliminate console spam from bundle.js

--- a/parking-front/public/index.html
+++ b/parking-front/public/index.html
@@ -34,6 +34,9 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/fontawesome.min.css" />
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css" />
   
+  <!-- Console suppression - must load before any other JavaScript -->
+  <script src="%PUBLIC_URL%/console-suppress.js"></script>
+  
   <!-- PWA Manifest -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
